--- a/style.scss
+++ b/style.scss
@@ -2,7 +2,7 @@
     background-image: url('https://blog.frasershospitality.com/wp-content/uploads/2019/11/2000px-Turkish-Bfast.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    min-height: 600px;
+    min-height: calc(100vh - 20px);
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -25,6 +25,25 @@ header{
     left: 0;
     right: 0;
     text-align: center;
+
+    P{
+        margin: 10px 30px;
+        background-color: rgba(255, 255, 255, 0.671);
+        font-size: 18px;
+        border-radius: 12px;
+        text-align: justify;
+        padding: 10px;
+    }
+
+    button{
+        background-color: rgb(209, 58, 20);
+        border:none;
+        transition: 0.5s;
+        &:hover{
+            background-color: rgb(240, 173, 17);
+            color: black;
+        }
+    }
 }
 
 .img-overlay:before{
@@ -32,3 +51,8 @@ header{
     display: block;
     height: 50%;
 }
+
+.card-custom{
+    margin: 20px 0px
+}
+
