--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   background-image: url("https://blog.frasershospitality.com/wp-content/uploads/2019/11/2000px-Turkish-Bfast.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  min-height: calc(100vh - 20px);
+  height: 100vh;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -12,9 +12,13 @@
 header {
   background-color: white;
   height: 20px;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  z-index: 1;
 }
 
-.navbar-brand {
+.navbar-brand img {
   width: 150px;
 }
 
@@ -56,5 +60,30 @@ header {
 
 .card-custom {
   margin: 20px 0px;
+  height: 550px;
+}
+
+.button-custom {
+  background-color: #d13a14 !important;
+  border: none !important;
+  -webkit-transition: 0.5s !important;
+  transition: 0.5s !important;
+}
+
+.button-custom:hover {
+  background-color: #f0ad11 !important;
+  color: black !important;
+}
+
+@media (max-width: 400px) {
+  .img-overlay:before {
+    height: 30%;
+  }
+  .img-overlay p {
+    margin: 0;
+  }
+  .navbar-brand img {
+    height: 85px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
