--- a/style.scss
+++ b/style.scss
@@ -65,6 +65,7 @@ header{
     background-color: rgb(209, 58, 20) !important;
     border:none !important;
     transition: 0.5s !important;
+    color: none !important;
     &:hover{
             background-color: rgb(240, 173, 17)!important;
             color: black!important;
@@ -82,7 +83,7 @@ header{
         margin: 0;      
     }
     .navbar-brand img{
-        height: 85px;
+        height: 100px;
     }
     
 }
