--- a/style.scss
+++ b/style.scss
@@ -28,7 +28,7 @@ header{
     right: 0;
     text-align: center;
 
-    P{
+    p{
         margin: 10px 30px;
         background-color: rgba(255, 255, 255, 0.671);
         font-size: 18px;
