--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,6 @@
+html{
+    scroll-behavior: smooth;
+}
 .banner{
     background-image: url('https://blog.frasershospitality.com/wp-content/uploads/2019/11/2000px-Turkish-Bfast.jpg');
     background-repeat: no-repeat;
@@ -55,8 +58,14 @@ header{
 }
 
 .card-custom{
-    margin: 20px 0px;
+    margin: 40px 0px;
     height: 550px;
+    opacity: 0.7;
+    transition: 0.5s;
+    &:hover{
+        transform: scale(1.1);
+        opacity: 1;
+    }
 }
 
 .button-custom{
@@ -70,7 +79,21 @@ header{
         }
 }
 
-@media (max-width: 400px) {
+.fundo{
+    background-color: rgba(0, 0, 0, 0.603);
+    margin-bottom: 20px;
+    padding-bottom: 5px !important;
+}
+
+.footer{
+    background-color: black;
+    color: white;
+    text-align: center;
+    padding: 25px;
+}
+
+
+@media (max-width: 430px) {
     .img-overlay:before{
         height: 30%;
     }
@@ -80,7 +103,12 @@ header{
     .navbar-brand img{
         height: 100px;
     }
+    .carousel-item img{
+        height: 300px;
+    }
 }
+
+
 
 /*
  ************************************
