--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ header {
   text-align: center;
 }
 
-.img-overlay P {
+.img-overlay p {
   margin: 10px 30px;
   background-color: rgba(255, 255, 255, 0.671);
   font-size: 18px;
