pagina culinaria francesa

--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ header {
   background-color: rgba(255, 255, 255, 0.671);
   font-size: 18px;
   border-radius: 12px;
+  font-weight: 600;
   text-align: justify;
   padding: 10px;
 }
@@ -147,6 +148,80 @@ header {
 /*
  ************************************
  * end brasileira.html
+ */
+ 
+/*
+ ************************************
+ * begin francesa.html
+ */
+.francesa #banner {
+  background-image: url("./images/Cheese.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-top: 100px;
+  font-weight: 600;
+  opacity: 0.9;
+}
+
+.francesa #banner div{
+  color: #ecf011;
+  background-color: rgba(0, 0, 0, 0.164);
+  padding: 5px;
+  border-radius: 12px;
+}
+
+.francesa .thumbnail {
+  width: 300px;
+  height: 300px;
+  object-fit: cover;
+}
+.francesa .hidden {
+  display: none;
+  margin-top: 100px;
+}
+.francesa #bannerEscargot {
+  background-image: url("./images/Escargot.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-top: 100px;
+}
+.francesa #bannerVinhos {
+  background-image: url("./images/VinhosFranceses.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-top: 100px;
+}
+.francesa #bannerRatatouille {
+  background-image: url("./images/Ratatouille.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-top: 100px;
+}
+.francesa #bannerQueijos {
+  background-image: url("./images/Queijos.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-top: 100px;
+  
+}
+.francesa #bannerMacarons {
+  background-image: url("./images/Macarons.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-top: 100px;
+  
+}
+.francesa #bannerPato {
+  background-image: url("./images/Pato.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-top: 100px;
+  
+}
+
+/*
+ ************************************
+ * end francesa.html
  */
 
 /*# sourceMappingURL=style.css.map */
