--- a/style.scss
+++ b/style.scss
@@ -125,7 +125,12 @@ header{
 	      background-image: url($url);
         background-repeat: no-repeat;
         background-size: cover;
-        opacity: 0.6;
+        opacity: 0.8;
+        p {
+            background-color: #0000007a;
+            border-radius: 15px;
+            padding: 5px 10px 5px 10px;
+        }
 
     }
     #banner {
@@ -179,10 +184,66 @@ header{
  * end brasileira.html
  */
 
+/*
+ ************************************
+ * begin japonesa.html
+ */
+
+.japonesa {
+    @mixin comumBanner($url) {
+	    background-image: url($url);
+        background-repeat: no-repeat;
+        background-size: cover;
+        margin-top: 100px;
+        opacity: 0.8;
+        p {
+            background-color: #0000007a;
+            border-radius: 15px;
+            padding: 5px 10px 5px 10px;
+        }
+    }
+    #banner {
+        @include comumBanner($url: 'https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2F2.bp.blogspot.com%2F-vKdCIu6Ffbo%2FUZ2KEY8VALI%2FAAAAAAAAAUQ%2FgEpzxWFSTy8%2Fs1600%2Fcomida%2Bjaponesa.jpg&f=1&nofb=1');
+    }
+    .thumbnail {
+        width: 200px;
+        height: 250px;
+        object-fit: cover;
+    }
+    .hidden {
+        display: none;
+        margin-top: 100px;
+    }
+    #bannerEscargot {
+        @include comumBanner($url: '');
+    }
+    #bannerVinhos {
+        @include comumBanner($url: '');
+    }
+    #bannerRatatouille {
+        @include comumBanner($url: '');
+    }
+    #bannerQueijos {
+        @include comumBanner($url: '');
+    }
+    #bannerMacarons {
+        @include comumBanner($url: '');
+    }
+    #bannerPato{
+        @include comumBanner($url: '');
+    }
+}
+
+ /************************************
+ * end japonesa.html
+ */
+
+
+
  /*
  ************************************
  * begin francesa.html
- 
+ * 
 
 .francesa{
     @mixin comumBanner($url) {
