ajuste pag japonesa

--- a/style.css
+++ b/style.css
@@ -271,6 +271,66 @@ header {
   display: none;
   margin-top: 100px;
 }
+.japonesa #banner1 {
+  background-image: url("https://escolaeducacao.com.br/wp-content/uploads/2019/03/asia-carrot-chopsticks-357756-1024x683.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-top: 100px;
+  opacity: 0.8;
+}
+.japonesa #banner1 p {
+  background-color: #0000007a;
+  border-radius: 15px;
+  padding: 5px 10px 5px 10px;
+}
+.japonesa #bannerSashimi {
+  background-image: url("https://escolaeducacao.com.br/wp-content/uploads/2019/03/chopsticks-close-up-cuisine-271715-1024x682.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-top: 100px;
+  opacity: 0.8;
+}
+.japonesa #bannerSashimi p {
+  background-color: #0000007a;
+  border-radius: 15px;
+  padding: 5px 10px 5px 10px;
+}
+.japonesa #bannerUnagi {
+  background-image: url("https://escolaeducacao.com.br/wp-content/uploads/2019/03/28727202561_1d9586cbd8_k-1024x768.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-top: 100px;
+  opacity: 0.8;
+}
+.japonesa #bannerUnagi p {
+  background-color: #0000007a;
+  border-radius: 15px;
+  padding: 5px 10px 5px 10px;
+}
+.japonesa #bannerYakitori {
+  background-image: url("https://escolaeducacao.com.br/wp-content/uploads/2019/03/Yakitori-foto-wikimedia-commons-1024x680.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-top: 100px;
+  opacity: 0.8;
+}
+.japonesa #bannerYakitori p {
+  background-color: #0000007a;
+  border-radius: 15px;
+  padding: 5px 10px 5px 10px;
+}
+.japonesa #bannerLamen {
+  background-image: url("https://escolaeducacao.com.br/wp-content/uploads/2019/03/bowl-chicken-cuisine-884600-1024x683.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-top: 100px;
+  opacity: 0.8;
+}
+.japonesa #bannerLamen p {
+  background-color: #0000007a;
+  border-radius: 15px;
+  padding: 5px 10px 5px 10px;
+}
 
 /************************************
 * end japonesa.html
