--- a/css/login.css
+++ b/css/login.css
@@ -19,6 +19,10 @@ main {
   margin-top: 100px;
 }
 
+form{
+  height: 500px;
+}
+
 #enviar {
   background-color: #d13a14;
   border: none;
@@ -29,12 +33,7 @@ main {
   color: black;
 }
 
-.footer {
-  background-color: black;
-  color: white;
-  text-align: center;
-  padding: 25px;
-}
+
 
 @media (max-width: 430px) {
   .img-overlay:before {
