--- a/style.css
+++ b/style.css
@@ -94,6 +94,16 @@ header {
   padding: 15px;
 }
 
+.footer p{
+  margin: 0 ;
+  padding-bottom: 0;
+}
+
+.footer h5{
+  margin:0;
+  padding-bottom: 0;
+}
+
 @media (max-width: 430px) {
   .img-overlay:before {
     height: 30%;
